--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,7 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+body {
+  background-color: blanchedalmond;
+  font-family: "Playfair Display", serif;
+}
 
 /*# sourceMappingURL=style.css.map */
