--- a/app/style.css
+++ b/app/style.css
@@ -4,4 +4,8 @@ body {
   font-family: "Playfair Display", serif;
 }
 
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none;
+}
+
 /*# sourceMappingURL=style.css.map */
