--- a/app/style.scss
+++ b/app/style.scss
@@ -1,10 +1,113 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
+
+$accent-color: #db6504;;
+
+// ADDS PADDING TO THE TOTAL WIDTH
+* {
+  box-sizing: border-box;
+}
 
 body {
-  background-color: blanchedalmond;
-  font-family: "Playfair Display", serif;
+  color: white;
+  background: #0f0c29; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #0f0c29, #302b63, #24243e) fixed;
+  background: linear-gradient(to top, #0f0c29, #302b63, #24243e) fixed;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: 200;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 [ng\:cloak], [ng-cloak], .ng-cloak {
   display: none;
+}
+
+.container {
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 500px;
+  min-width: 320px;
+  margin-top: 70px;
+  border-radius: 10px;
+}
+
+
+.search {
+  width: 100%;
+  padding: 20px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  input {
+    width: 420px;
+    height: 40px;
+    border-radius: 40px;
+    padding: 0px 10px;
+  }
+  #find {
+    width: 35px;
+    height: 35px;
+    border-radius: 30px;
+    color: white;
+    background-color: $accent-color;
+    position: relative;
+    left: -50px;
+    padding: 0;
+    margin: 0;
+    #find:hover {
+      background-color: brown;
+    }
+  }
+  #locate {
+    width: 40px;
+    height: 40px;
+    border-radius: 35px;
+  }
+  .material-icons {
+    font-size: 22px;
+    padding-top: 5px;
+  }
+}
+
+
+.today-weather {
+  text-align: center;
+  padding: 20px;
+  display: flex;
+
+  .today-main {
+    width: 240px;
+  }
+  #city-name {
+    font-size: 24px;
+  }
+  #date {
+
+  }
+  #temperature {
+    font-size: 44px;
+    font-weight: 500;
+
+  }
+  #weather-icon {
+    width: 50px;
+  }
+  .today-info {
+    color: rgba(255, 255, 255, 0.7);
+    width: 220px;
+    text-align: left;
+    padding: 0px 6px;
+
+  }
+  #decription {
+    text-transform: capitalize;
+  }
+}
+
+
+.future-weather {
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 0px 0px 10px 10px;
 }
