--- a/app/style.scss
+++ b/app/style.scss
@@ -37,8 +37,8 @@ body {
     border-radius: 30px;
     color: white;
     background-color: $accent-color;
-    //position: relative;
-    //left: -50px;
+    position: relative;
+    left: -50px;
     padding: 0;
     margin: 0;
     #find:hover {
