--- a/app/style.css
+++ b/app/style.css
@@ -24,7 +24,7 @@ body {
 .container {
   background-color: rgba(0, 0, 0, 0.3);
   width: 500px;
-  min-width: 320px;
+  min-width: 400px;
   margin-top: 70px;
   border-radius: 10px;
 }
@@ -34,30 +34,55 @@ body {
   padding: 20px 30px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-content: center;
 }
 .search input {
-  width: 420px;
+  width: 350px;
   height: 40px;
   border-radius: 40px;
-  padding: 0px 10px;
+  padding: 0px 50px 0px 20px;
+  border: none;
 }
-.search #find {
-  width: 35px;
-  height: 35px;
-  border-radius: 30px;
-  color: white;
-  background-color: #db6504;
-  padding: 0;
-  margin: 0;
+.search input:focus {
+  outline: none;
+  box-shadow: 0px 0px 10px 0px #6398e8;
 }
-.search #find #find:hover {
-  background-color: brown;
-}
-.search #locate {
+.search button {
   width: 40px;
   height: 40px;
-  border-radius: 35px;
+  border-radius: 30px;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.search button:hover {
+  background-color: #db6504;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.search button:focus {
+  outline: none;
+}
+.search button:active {
+  background-color: #db8c04;
+  transform: scale(0.9);
+}
+.search #find {
+  position: relative;
+  left: -42px;
+  top: 7px;
+  color: white;
+  background-color: #db6504;
+  width: 32px;
+  height: 32px;
+}
+.search #find:hover {
+  background-color: #db8c04;
+  transition: 0.5s;
+}
+.search #locate {
+  position: relative;
+  top: 3px;
 }
 .search .material-icons {
   font-size: 22px;
