--- a/app/style.scss
+++ b/app/style.scss
@@ -27,7 +27,7 @@ body {
 .container {
   background-color: rgba(0, 0, 0, 0.3);
   width: 500px;
-  min-width: 320px;
+  min-width: 400px;
   margin-top: 70px;
   border-radius: 10px;
 }
@@ -38,32 +38,58 @@ body {
   padding: 20px 30px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-content: center;
   input {
-    width: 420px;
+    width: 350px;
     height: 40px;
     border-radius: 40px;
-    padding: 0px 10px;
-  }
-  #find {
-    width: 35px;
-    height: 35px;
-    border-radius: 30px;
-    color: white;
-    background-color: $accent-color;
-    //position: relative;
-    //left: -50px;
-    padding: 0;
-    margin: 0;
-    #find:hover {
-      background-color: brown;
+    padding: 0px 50px 0px 20px;
+    border: none;
+    &:focus {
+      outline: none;
+      box-shadow: 0px 0px 10px 0px rgb(99, 152, 232);
     }
   }
-  #locate {
+  button {
     width: 40px;
     height: 40px;
-    border-radius: 35px;
+    border-radius: 30px;
+    border: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    &:hover {
+      background-color: $accent-color;
+      transition: 0.5s;
+      cursor: pointer;
+    }
+    &:focus {
+      outline: none;
+    }
+    &:active {
+      background-color: #db8c04;
+      transform: scale(0.9);
+    }
   }
+
+  #find {
+    position: relative;
+    left: -42px;
+    top: 7px;
+    color: white;
+    background-color: $accent-color;
+    width: 32px;
+    height: 32px;
+    &:hover {
+      background-color: #db8c04;
+      transition: 0.5s;
+    }
+  }
+
+  #locate {
+    position: relative;
+    top: 3px;
+  }
+
   .material-icons {
     font-size: 22px;
     padding-top: 5px;
