Veikia automatinis 5 dienu generavimas

--- a/app/style.css
+++ b/app/style.css
@@ -24,7 +24,6 @@ body {
 .container {
   background-color: rgba(0, 0, 0, 0.3);
   width: 500px;
-  min-width: 400px;
   margin-top: 70px;
   border-radius: 10px;
 }
@@ -103,6 +102,7 @@ body {
 .today-weather #temperature {
   font-size: 44px;
   font-weight: 500;
+  margin-top: -50px;
 }
 .today-weather #weather-icon {
   width: 50px;
@@ -117,10 +117,41 @@ body {
   text-transform: capitalize;
 }
 
-.future-weather {
+.future-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 0px 0px 10px 10px;
+  text-align: center;
+}
+
+.future-info {
+  flex: 1 0 20%;
+  margin: 0px 0px;
+  padding: 0px 0px;
+}
+
+#future-date {
+  font-size: 13px;
+  margin-top: 10px;
+}
+
+#future-icon {
+  margin: 5px 20px 0px 20px;
+  max-width: 50px;
+}
+
+#future-temp {
+  font-weight: 500;
+  margin-top: -15px;
+}
+
+#future-wind {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 13px;
+  margin-top: -25px;
 }
 
 /*# sourceMappingURL=style.css.map */
