--- a/app/style.css
+++ b/app/style.css
@@ -113,8 +113,8 @@ body {
   text-align: left;
   padding: 0px 6px;
 }
-.today-weather #decription {
-  text-transform: capitalize;
+.today-weather #decription::first-letter {
+  text-transform: uppercase;
 }
 
 .future-container {
